languages/CNNTrainLang/src/test/resources/invalid_cocos_tests/CheckDiscreteRLAlgorithmUsesDiscreteStrategy.cnnt
/* (c) https://github.com/MontiCore/monticore */
configuration CheckDiscreteRLAlgorithmUsesDiscreteStrategy {
     learning_method : reinforcement
     rl_algorithm: dqn-algorithm

     environment : gym { name:"CartPole-v1" }

     strategy: ornstein_uhlenbeck {
        epsilon: 1.0
        epsilon_decay_method: linear
        epsilon_decay: 0.01
        mu: (0.0, 0.1, 0.3)
        theta: (0.5, 0.0, 0.8)
        sigma: (0.3, 0.6, -0.9)
     }
}
